--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "benjaminferge/event-store",
     "description": "Event sourcing library.",
     "type": "library",
-    "license": "LGPL",
+    "license": "LGPL-3.0-or-later",
     "authors": [
         {
             "name": "Benjamin J. Ferge",
