--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,11 @@
         "psr-4": {
             "EventStore\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8"
+    },
+    "scripts": {
+        "test": "phpunit test/."
     }
 }
